--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,9 +123,9 @@ jobs:
           docker run --rm --platform linux/s390x alpine uname -a
           docker run --rm --platform linux/riscv64 alpine uname -a
           docker run --rm --platform linux/loong64 registry.alpinelinux.org/img/alpine uname -a
-          docker run --rm --platform linux/s390x ubuntu apt update
-          docker run --rm --platform linux/ppc64le ubuntu apt update
-          docker run --rm --platform linux/arm64 ubuntu apt update
+          docker run --rm --platform linux/s390x ubuntu apt-get update
+          docker run --rm --platform linux/ppc64le ubuntu apt-get update
+          docker run --rm --platform linux/arm64 ubuntu apt-get update
       -
         name: Test Syscalls
         if: matrix.target == 'mainline'
